samples/troubleshooting/invalid/R11.dita
<?xml version="1.0" encoding="UTF-8"?>
<troubleshooting>
  <title>T</title>
  <prolog/>
  <troublebody>
    <troubleSolution>
      <remedy>
        <responsibleParty>User</responsibleParty>
        <title>R</title>
        <steps><step><cmd>Do it.</cmd></step></steps>
      </remedy>
    </troubleSolution>
  </troublebody>
</troubleshooting>